# scan_google_sheet

./: LICENSE  README.md  pyproject.toml
__marimo__/session/: test.py.json
src/scan_google_sheet/: __init__.py  exceptions.py  fetch.py  parse.py  scan.py  url.py
tests/: test_exception.py  test_fetch.py  test_scan.py  test_url.py
