[project]
name = "scan-google-sheet"
version = "0.1.0"
description = "Read public Google Sheets into Polars LazyFrames — no auth required"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Attica-oss", email = "g.mounac@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "httpx>=0.28.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "sqlglot>=30.2.1",
]
keywords = ["polars", "google-sheets", "csv", "dataframe", "lazy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]


[project.urls]
Repository = "https://github.com/Attica-oss/scan_google_sheet"
Issues = "https://github.com/Attica-oss/scan_google_sheet/issues"
Documentation = "https://github.com/Attica-oss/scan_google_sheet/blob/main/README.md"
Homepage = "https://github.com/Attica-oss/scan_google_sheet"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/scan_google_sheet"]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.22.0",
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]


# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "ANN", # flake8-annotations
]
ignore = [
  "ANN101", # missing type annotation for self
  "ANN102", # missing type annotation for cls
]

[tool.ruff.lint.isort]
known-first-party = ["scan_google_sheet"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── ty ────────────────────────────────────────────────────────────────────────

[tool.ty.rules]
division-by-zero = "error"
invalid-return-type = "error"

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
